--- a/keyboard/build.gradle
+++ b/keyboard/build.gradle
@@ -22,10 +22,14 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0-alpha03'
@@ -42,7 +46,7 @@ ext {
     GITHUB_REPO_PATH = "D:/develop/remoteLibs/KeyboardLib"       //这里指定的就是刚刚新建项目后clone下来的在本地的路径
     PUBLISH_GROUP_ID = 'com.kanshu'
     PUBLISH_ARTIFACT_ID = 'keyboard'
-    PUBLISH_VERSION = '0.0.1'
+    PUBLISH_VERSION = '0.0.2'
 }
 uploadArchives {
     repositories.mavenDeployer {
